# ImpGears

./: CMakeLists.txt  LICENSE  Makefile  README.md  install
Plugins/glPlugin/: BloomFX.cpp  BufferObject.cpp  BufferObject.h  CMakeLists.txt  CubeMap.cpp  CubeMap.h  EnvironmentFX.cpp  EnvironmentFX.h  FrameBuffer.h  GLInterface.cpp  GLInterface.h  GlRenderer.cpp  GlRenderer.h  GlslCode.h  Program.cpp  Program.h  Texture.cpp  Texture.h
Plugins/glPlugin/reports/: report_1049.txt  report_1054.txt  report_1056.txt  report_1102.txt
benchs/RTRenderer/: CMakeLists.txt  Makefile  RTSceneRenderer.cpp  RTSceneRenderer.h  viewer.cpp
benchs/common/: RenderModeManager.h  RenderModeManager_glfw.h  basic_geometries.h  basic_skybox.h
benchs/cpuRendering/: CMakeLists.txt  Core.h  JsonGeometryOp.cpp  JsonGeometryOp.h  Makefile  defaultshader.vert  engine.h  geometries.json  model.h  textures.json  viewer.cpp
benchs/fovTest/: CMakeLists.txt  viewer.cpp
benchs/freecam/: CMakeLists.txt  viewer.cpp
benchs/imgProcessing/: CMakeLists.txt  Makefile  viewer.cpp
benchs/jsonCsgEditor/: Constructive.h  Makefile  Model.h  ModelEdit.h  geometry_build.h  geometry_json.h  main.cpp
benchs/leaf/: Makefile  mGeometry.h  viewer.cpp
benchs/particules/: CMakeLists.txt  viewer.cpp
benchs/planet_editor/: Makefile  main.cpp  render_skybox.h
benchs/plant_editor/: Makefile  main.cpp  proc_skybox.h  render_skybox.h  rock.h  terrain.h  textures.json
benchs/polygon/: CMakeLists.txt  ComplexPolygon.cpp  ComplexPolygon.h  Cycle.cpp  Cycle.h  Makefile  Path.cpp  Path.h  PolygonSet.cpp  PolygonSet.h  SimplePolygon.cpp  SimplePolygon.h  viewer.cpp
benchs/polyhedron/: Makefile  Triangulator.cpp  Triangulator.h  equation.cpp  equation.h  initGraph.cpp  phong.frag  phong.vert  shader.h  viewer.cpp
benchs/terrain/: CMakeLists.txt  Makefile  viewer.cpp
benchs/texture_editor/: Makefile  leafrenderer.h  main.cpp
benchs/texturing/: main.cpp  procedure.json
benchs/utils/: AppContext.h
benchs/warehouse/: CMakeLists.txt  Makefile  viewer.cpp
examples/bench/: main.cpp
examples/common/: atlas-generation.json
examples/commun/: generate-atlas.sh  spritefont-config.json
examples/cpuCube/: CMakeLists.txt  Makefile  viewer.cpp
examples/cpuRenderer/: Core.h  engine.h  model.h  viewer.cpp
examples/geometryViewer/: viewer.cpp
examples/nodalEditor/: Makefile  nodal.cpp
examples/objConditioner/: Makefile  objConditioner.cpp
examples/objConditionner/: Makefile  objConditioner.cpp
examples/shadertoyLike/: CMakeLists.txt  Makefile  defaultshader.frag  defaultshader.vert  viewer.cpp
examples/textureGeneration/: Makefile  main.cpp  procedure.json
examples/utils/: AppContext.h
impgears/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EvnContextInterface.h  SFMLContextInterface.cpp  SFMLContextInterface.h  ScreenVertex.cpp  ScreenVertex.h
includes/: Entity.h  EntityManager.h  EvnContextInterface.h  SFMLContextInterface.h  ScreenVertex.h
src/: Entity.cpp  EvnContextInterface.cpp
src/ImpGears/Core/: BasicFunctions.cpp  CMakeLists.txt  Entity.cpp  EntityManager.cpp  FilePath.cpp  ImpGearsSystem.cpp  KeyBindingConfig.cpp  Lock.cpp  Math.cpp  Matrix3.cpp  Matrix4.cpp  Noise.cpp  Parser.cpp  Perlin.cpp  Rectangle.cpp  State.cpp  Streamable.cpp  String.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  Vector3.cpp
src/ImpGears/Descriptors/: CMakeLists.txt  FileInfo.cpp  ImageIO.cpp  JsonGeometryOp.cpp  JsonImageOp.cpp  JsonReaderWriter.cpp  JsonSceneNode.cpp
src/ImpGears/Geometry/: CMakeLists.txt  ComplexPolygon.cpp  Geometry.cpp  GeometryBuilder.cpp  InstancedGeometry.cpp  Path.cpp  Polygon.cpp  PolygonScissor.cpp  PolygonTriangulator.cpp  Polyhedron.cpp  ProceduralGeometry.cpp  Triangulator.cpp
src/ImpGears/Graphics/: CMakeLists.txt  CpuBlinnPhong.cpp  FloatImage.cpp  GeometryRenderer.cpp  Image.cpp  ImageOperation.cpp  Rasterizer.cpp  Sampler.cpp  Uniform.cpp
src/ImpGears/OGLPlugin/: AmbientOcclusion.cpp  BlendAll.cpp  BloomFX.cpp  CMakeLists.txt  EnvironmentFX.cpp  GLInterface.cpp  GlRenderer.cpp  LightingModel.cpp  Pipeline.cpp  Program.cpp  RenderToCubeMap.cpp  ShadowCasting.cpp  Texture.cpp  VertexArray.cpp
src/ImpGears/Plugins/: CMakeLists.txt  RenderPlugin.cpp
src/ImpGears/Renderer/: CMakeLists.txt  CpuBlinnPhong.cpp  CpuRenderPlugin.cpp  CpuRenderer.cpp  GeometryRenderer.cpp  GlRenderer.cpp  LightModelImpl.h  RenderPlugin.cpp  RenderQueue.cpp  RenderTarget.cpp  RenderVisitor.cpp  SceneRenderer.cpp  SceneVisitor.cpp  Target.cpp  TextureSampler.cpp  Uniform.cpp
src/ImpGears/RendererGL/: AmbientOcclusion.cpp  BlendAll.cpp  BloomFX.cpp  CMakeLists.txt  CopyFrame.cpp  CubeMap.cpp  EnvironmentFX.cpp  FrameBuffer.cpp  GLInterface.cpp  GlRenderer.cpp  LightingModel.cpp  Pipeline.cpp  Program.cpp  RenderToCubeMap.cpp  ShadowCasting.cpp  Texture.cpp  VertexArray.cpp
src/ImpGears/SceneGraph/: BasicShader.cpp  BlinnPhongShader.cpp  BloomShader.cpp  BlurShader.cpp  BmpLoader.cpp  CMakeLists.txt  Camera.cpp  ClearNode.cpp  CpuRenderPlugin.cpp  DebugTextureShader.cpp  DefaultShader.cpp  DeferredShader.cpp  FinalRenderShader.cpp  FreeFlyCamera.cpp  GeoNode.cpp  Graph.cpp  GraphRenderer.cpp  GraphicRenderer.cpp  GraphicState.cpp  ImageData.cpp  LightModel.cpp  LightModelImpl.h  LightNode.cpp  Material.cpp  Mesh.cpp  MeshNode.cpp  Node.cpp  OBJMeshLoader.cpp  PngLoader.cpp  PreBloomShader.cpp  QuadNode.cpp  ReflexionModel.cpp  RenderParameters.cpp  RenderPass.cpp  RenderPlugin.cpp  RenderTarget.cpp  RenderToSamplerNode.cpp  SSAOShader.cpp  Sampler.cpp  SceneGraph.cpp  (+17 more)
src/OGLPlugin/: AmbientOcclusion.cpp  BlendAll.cpp  BloomFX.cpp  BufferObject.cpp  CMakeLists.txt  CopyFrame.cpp  CubeMap.cpp  EnvironmentFX.cpp  FrameBuffer.cpp  FrameToScreen.cpp  FxRenderPass.cpp  GLInterface.cpp  GlRenderer.cpp  LightingModel.cpp  Pipeline.cpp  Program.cpp  RenderToCubeMap.cpp  ShadowCasting.cpp  Texture.cpp  VertexArray.cpp
src/benchs/imguiExe/jsonCsgEditor/: CMakeLists.txt  render_skybox.h
src/benchs/imguiExe/jsonCsgEditor/json/: crystal1.json
src/benchs/imguiExe/plant_editor/: CMakeLists.txt  vegetal.h
(+719 files in other folders)
